--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "glob": "^8.1.0",
     "vite": "^4.5.2"
   },
-  "author": "Maciej Bratko <maciej.bratko@gmail.com>",
+  "author": "Piotr Wagner <wgr.animations@gmail.com>",
   "description": "goit-js-hw-12",
   "license": "ISC",
   "dependencies": {
